updated link to footer

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <a href="#startups" class="nav__link">Startups</a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link">Contact</a>
+              <a href="#footer" class="nav__link">Contact</a>
             </li>
           </ul>
 
@@ -414,7 +414,9 @@
         <div class="startup__background">
           <img src="assets/img/shape-bg.png" alt="" class="startup__shape-bg" />
         </div>
-        
+        <div class="container">
+          footer to be added
+        </div>
       </section>
     </main>
 
